--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
     "gatsby-plugin-offline": "^3.0.40",
     "gatsby-plugin-react-helmet": "^3.1.23",
     "gatsby-plugin-sharp": "^2.4.12",
+    "gatsby-plugin-typescript": "^2.2.5",
+    "gatsby-plugin-typography": "^2.3.25",
     "gatsby-source-filesystem": "^2.1.55",
     "gatsby-transformer-sharp": "^2.3.18",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.0.1",
+    "@types/typography": "^0.16.3",
     "gh-pages": "^2.2.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "react-icons": "^3.9.0",
+    "styled-components": "^5.0.1",
+    "typography-theme-funston": "^0.16.19"
   },
   "keywords": [
     "gatsby"
